# zero2prod

./: .cursorrules  .gitignore  Cargo.toml  Makefile  README.md
.sqlx/: query-3bf9914fa47467cc7efdaf2d3455c5a729cd09339a99a2969132fd82449ca10a.json  query-bbcfe70ab72d7ff9f44e61974a3fb99ae605ba7e32993b8fbc8d59f600a67068.json  query-cd84f0cde8bdde42f4f7e68f50558056bfc788b2a7549c41c74decb3b18bf380.json  query-d47915252a511c7624940532f323e07cd9ac84cce3c55011a6c2b4565aa4e8bc.json  query-d9ba52333ad3cdb0537a5e383ee5a013fbe055ab0124b697e328e9ea99483a87.json
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
migrations/: 20250419113800_create_subscriptions_table.sql  20250511041559_make_status_not_null_in_subscriptions.sql  20250511041950_create_subscription_tokens_table.sql  20250601144411_rename_password_column.sql  20250611140855_seed_user.sql  20250614113732_create_idempotency_table.sql  20250618150531_create_issue_delivery_queue_table.sql
scripts/: run-test.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: domain_test.rs  health_check.rs  health_check_test.rs  helpers.rs  subscriptions.rs  subscriptions_test.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
