[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
claims = "0.8.0"
config = "0.15.11"
linkify = "0.10.0"
once_cell = "1.21.3"
rand = { version = "0.9.1", features = ["std_rng"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "rt"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
fake = "4.3.0"
proptest = "1.6.0"
tokio-test = "0.4.3"
wiremock = "0.6.3"
